--- a/functions/package.json
+++ b/functions/package.json
@@ -13,5 +13,8 @@
     "firebase-functions": "^2.0.3",
     "express": "^4.16.3"
   },
+  "devDependencies": {
+    "mocha": "^5.2.0"
+  },
   "private": true
 }
